Revert "disable linkerd cni plugin"
This reverts commit 1cfacf79052f83f3c336df4839ed08d9def911c4.

--- a/env/cluster-addons/tools-dedicated-ns/linkerd/linkerd-values.yaml
+++ b/env/cluster-addons/tools-dedicated-ns/linkerd/linkerd-values.yaml
@@ -8,4 +8,4 @@ identity:
 # [Linkerd documentation](https://linkerd.io/2/tasks/install-helm#customizing-the-namespace) for more information.
 installNamespace: true
 
-# cniEnabled: true
+cniEnabled: true
