disable jaeger prd strategy

--- a/env/cluster-addons/monitoring/jaeger-operator/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger-operator/values.yaml
@@ -1,7 +1,7 @@
 jaeger:
   create: true
   spec:
-    strategy: production
+    # strategy: production
     ingress:
       enabled: true
       hosts:
