--- a/env/cluster-addons/tools-dedicated-ns/linkerd/linkerd-viz-values.yaml
+++ b/env/cluster-addons/tools-dedicated-ns/linkerd/linkerd-viz-values.yaml
@@ -1,3 +1,6 @@
+installNamespace: false
+namespace: linkerd
+
 prometheusUrl: http://prometheus-operator-kube-p-prometheus.monitoring:9090
 jaegerUrl: jaeger-operator-jaeger-query.monitoring
 
