--- a/env/cluster-addons/tools-dedicated-ns/cert-manager/values.yaml
+++ b/env/cluster-addons/tools-dedicated-ns/cert-manager/values.yaml
@@ -1,4 +1,116 @@
+# # image:
+# #   repository: 
+# #   pullPolicy: IfNotPresent
+
+# resources:
+#   requests:
+#     cpu: 100m
+#     memory: 128Mi
+#   limits:
+#     cpu: 100m
+#     memory: 128Mi
+
+# securityContext:
+#   fsGroup: 1000
+#   runAsUser: 1000
+#   runAsNonRoot: true
+
+# containerSecurityContext:
+#   allowPrivilegeEscalation: false
+#   capabilities:
+#     drop:
+#     - ALL
+#   readOnlyRootFilesystem: true
+#   runAsNonRoot: true
+
 prometheus:
   enabled: true
 
 installCRDs: true
+
+# webhook:
+#   # image:
+#   #   repository: 
+#   #   pullPolicy: IfNotPresent
+
+#   # The port that the webhook should listen on for requests.
+#   # In GKE private clusters, by default kubernetes apiservers are allowed to
+#   # talk to the cluster nodes only on 443 and 10250. so configuring
+#   # securePort: 10250, will work out of the box without needing to add firewall
+#   # rules or requiring NET_BIND_SERVICE capabilities to bind port numbers <1000
+#   # Required for Fargate EKS cluster as per https://github.com/cert-manager/cert-manager/issues/3237#issuecomment-856348506
+#   securePort: 10260
+
+#   securityContext:
+#     fsGroup: 1000
+#     runAsUser: 1000
+#     runAsNonRoot: true
+
+#   containerSecurityContext:
+#     allowPrivilegeEscalation: false
+#     capabilities:
+#       drop:
+#       - ALL
+#     readOnlyRootFilesystem: true
+#     runAsNonRoot: true
+  
+#   resources:
+#     requests:
+#       cpu: 100m
+#       memory: 128Mi
+#     limits:
+#       cpu: 100m
+#       memory: 128Mi
+
+# cainjector:
+#   enabled: true
+#   # image:
+#   #   repository: 
+#   #   pullPolicy: IfNotPresent
+  
+#   securityContext:
+#     fsGroup: 1000
+#     runAsUser: 1000
+#     runAsNonRoot: true
+
+#   containerSecurityContext:
+#     allowPrivilegeEscalation: false
+#     capabilities:
+#       drop:
+#       - ALL
+#     readOnlyRootFilesystem: true
+#     runAsNonRoot: true
+  
+#   resources:
+#     requests:
+#       cpu: 100m
+#       memory: 128Mi
+#     limits:
+#       cpu: 100m
+#       memory: 128Mi
+
+# startupapicheck:
+#   # image:
+#   #   repository: 
+#   #   pullPolicy: IfNotPresent
+
+#   securityContext:
+#     fsGroup: 1000
+#     runAsUser: 1000
+#     runAsNonRoot: true
+
+#   containerSecurityContext:
+#     allowPrivilegeEscalation: false
+#     capabilities:
+#       drop:
+#       - ALL
+#     readOnlyRootFilesystem: true
+#     runAsNonRoot: true
+  
+#   resources:
+#     requests:
+#       cpu: 100m
+#       memory: 128Mi
+#     limits:
+#       cpu: 100m
+#       memory: 128Mi
