Revert "consolidate linkerd extension ns"
This reverts commit 3d2f8e44351186b70cc4c3f51619e01e48a141d5.

--- a/env/cluster-addons/tools-dedicated-ns/linkerd/kustomization.yaml
+++ b/env/cluster-addons/tools-dedicated-ns/linkerd/kustomization.yaml
@@ -16,14 +16,14 @@ helmCharts:
     name: linkerd2-cni
     version: 2.11.1
     releaseName: linkerd-cni
-    namespace: linkerd
+    namespace: linkerd-cni
     valuesFile: linkerd-cni-values.yaml
 
   - repo: https://helm.linkerd.io/stable
     name: linkerd-viz
     version: 2.11.1
     releaseName: linkerd-viz
-    namespace: linkerd
+    namespace: linkerd-viz
     valuesFile: linkerd-viz-values.yaml
 
   - repo: https://flagger.app
