--- a/env/cluster-addons/monitoring/tempo/values.yaml
+++ b/env/cluster-addons/monitoring/tempo/values.yaml
@@ -14,7 +14,7 @@ tempo:
     capabilities:
       drop:
         - ALL
-    # readOnlyRootFilesystem: true
+    readOnlyRootFilesystem: false
     runAsNonRoot: true
     runAsUser: 1000
 
