--- a/env/cluster-addons/dedicated-ns/cert-manager/values.yaml
+++ b/env/cluster-addons/dedicated-ns/cert-manager/values.yaml
@@ -28,7 +28,7 @@ prometheus:
 
 installCRDs: true
 
-# webhook:
+webhook:
 #   # image:
 #   #   repository: 
 #   #   pullPolicy: IfNotPresent
@@ -39,20 +39,20 @@ installCRDs: true
 #   # securePort: 10250, will work out of the box without needing to add firewall
 #   # rules or requiring NET_BIND_SERVICE capabilities to bind port numbers <1000
 #   # Required for Fargate EKS cluster as per https://github.com/cert-manager/cert-manager/issues/3237#issuecomment-856348506
-#   securePort: 10260
+#   securePort: 10250
 
-#   securityContext:
-#     fsGroup: 1000
-#     runAsUser: 1000
-#     runAsNonRoot: true
+  securityContext:
+    fsGroup: 1000
+    runAsUser: 1000
+    runAsNonRoot: true
 
-#   containerSecurityContext:
-#     allowPrivilegeEscalation: false
-#     capabilities:
-#       drop:
-#       - ALL
-#     readOnlyRootFilesystem: true
-#     runAsNonRoot: true
+  containerSecurityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+      - ALL
+    readOnlyRootFilesystem: true
+    runAsNonRoot: true
   
 #   resources:
 #     requests:
@@ -62,24 +62,24 @@ installCRDs: true
 #       cpu: 100m
 #       memory: 128Mi
 
-# cainjector:
-#   enabled: true
+cainjector:
+  enabled: true
 #   # image:
 #   #   repository: 
 #   #   pullPolicy: IfNotPresent
   
-#   securityContext:
-#     fsGroup: 1000
-#     runAsUser: 1000
-#     runAsNonRoot: true
+  securityContext:
+    fsGroup: 1000
+    runAsUser: 1000
+    runAsNonRoot: true
 
-#   containerSecurityContext:
-#     allowPrivilegeEscalation: false
-#     capabilities:
-#       drop:
-#       - ALL
-#     readOnlyRootFilesystem: true
-#     runAsNonRoot: true
+  containerSecurityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+      - ALL
+    readOnlyRootFilesystem: true
+    runAsNonRoot: true
   
 #   resources:
 #     requests:
@@ -89,23 +89,23 @@ installCRDs: true
 #       cpu: 100m
 #       memory: 128Mi
 
-# startupapicheck:
+startupapicheck:
 #   # image:
 #   #   repository: 
 #   #   pullPolicy: IfNotPresent
 
-#   securityContext:
-#     fsGroup: 1000
-#     runAsUser: 1000
-#     runAsNonRoot: true
+  securityContext:
+    fsGroup: 1000
+    runAsUser: 1000
+    runAsNonRoot: true
 
-#   containerSecurityContext:
-#     allowPrivilegeEscalation: false
-#     capabilities:
-#       drop:
-#       - ALL
-#     readOnlyRootFilesystem: true
-#     runAsNonRoot: true
+  containerSecurityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+      - ALL
+    # readOnlyRootFilesystem: true
+    runAsNonRoot: true
   
 #   resources:
 #     requests:
