fix linkerd viz ing

--- a/env/cluster-addons/dedicated-ns/linkerd-stack/linkerd-viz/resources/linkerd-viz-ingress.yaml
+++ b/env/cluster-addons/dedicated-ns/linkerd-stack/linkerd-viz/resources/linkerd-viz-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: linkerd-viz-ingress
-  namespace: linkerd-viz
+  namespace: linkerd
   labels:
     name: linkerd-viz-ingress
   annotations:
