--- a/argocd/apps/cluster-addons/cluster-addons-tools-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-tools-appset.yaml
@@ -1,44 +1,44 @@
-apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
-metadata:
-  name: cluster-addons-tools-appset
-  namespace: argocd
-spec:
-  generators:
-    - matrix:
-        generators:
-          - git:
-              repoURL: https://github.com/logamanig/sample-argocd-apps
-              revision: master
-              directories:
-                - path: env/cluster-addons/tools/*
+# apiVersion: argoproj.io/v1alpha1
+# kind: ApplicationSet
+# metadata:
+#   name: cluster-addons-tools-appset
+#   namespace: argocd
+# spec:
+#   generators:
+#     - matrix:
+#         generators:
+#           - git:
+#               repoURL: https://github.com/logamanig/sample-argocd-apps
+#               revision: master
+#               directories:
+#                 - path: env/cluster-addons/tools/*
 
-                - path: env/cluster-addons/tools/ingress-nginx
-                  exclude: true # ingress excluded as this sample running on minukube with ingress addon enabled
-                - path: env/cluster-addons/tools/argo-rollouts
-                  exclude: true # Exlcuded in favour of flagger (add through linkerd argocd app)
+#                 - path: env/cluster-addons/tools/ingress-nginx
+#                   exclude: true # ingress excluded as this sample running on minukube with ingress addon enabled
+#                 - path: env/cluster-addons/tools/argo-rollouts
+#                   exclude: true # Exlcuded in favour of flagger (add through linkerd argocd app)
                   
-          - clusters: {} # all registered clusters in argocd
-              # selector:
-              #   matchLabels:
-              #     argocd.argoproj.io/secret-type: cluster
-  template:
-    metadata:
-      name: '{{path.basename}}-{{name}}'
-      namespace: argocd
-    spec:
-      project: cluster-addons
-      source:
-        repoURL: https://github.com/logamanig/sample-argocd-apps
-        targetRevision: master
-        path: '{{path}}'
-      destination:
-        server: '{{server}}'
-        namespace: tools
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: true
-        syncOptions:
-          - CreateNamespace=true
-          - RespectIgnoreDifferences=true # for kynervo policies
+#           - clusters: {} # all registered clusters in argocd
+#               # selector:
+#               #   matchLabels:
+#               #     argocd.argoproj.io/secret-type: cluster
+#   template:
+#     metadata:
+#       name: '{{path.basename}}-{{name}}'
+#       namespace: argocd
+#     spec:
+#       project: cluster-addons
+#       source:
+#         repoURL: https://github.com/logamanig/sample-argocd-apps
+#         targetRevision: master
+#         path: '{{path}}'
+#       destination:
+#         server: '{{server}}'
+#         namespace: tools
+#       syncPolicy:
+#         automated:
+#           prune: true
+#           selfHeal: true
+#         syncOptions:
+#           - CreateNamespace=true
+#           - RespectIgnoreDifferences=true # for kynervo policies
