--- a/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
@@ -4,9 +4,16 @@ resources:
   - "./resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml"
 
 helmCharts:
-  - repo: https://helm.linkerd.io/stable
-    name: linkerd2
-    version: 2.11.1
-    releaseName: linkerd
+  - repo: https://helm.linkerd.io/edge
+    name: linkerd-crds
+    version: 1.1.0-edge
+    releaseName: linkerd-crds
+    namespace: linkerd
+    valuesFile: values.yaml
+
+  - repo: https://helm.linkerd.io/edge
+    name: linkerd-crds
+    version: 1.2.0-edge
+    releaseName: linkerd-control-plane
     namespace: linkerd
     valuesFile: values.yaml
