--- a/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
@@ -4,12 +4,11 @@ resources:
   - "./resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml"
 
 helmCharts:
-  - repo: https://helm.linkerd.io/edge
-    name: linkerd-crds
-    version: 1.1.0-edge
-    releaseName: linkerd-crds
-    namespace: linkerd
-    valuesFile: values.yaml
+  # - repo: https://helm.linkerd.io/edge
+  #   name: linkerd-crds
+  #   version: 1.1.0-edge
+  #   releaseName: linkerd-crds
+  #   namespace: linkerd
 
   - repo: https://helm.linkerd.io/edge
     name: linkerd-crds
