--- a/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
@@ -7,6 +7,7 @@ helmCharts:
   - repo: https://helm.linkerd.io/edge
     name: linkerd-crds
     version: 1.1.0-edge
+    includeCRDs: true
     releaseName: linkerd-crds
     namespace: linkerd
 
