include crds for linkerd control plane

--- a/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
@@ -16,4 +16,5 @@ helmCharts:
     version: 1.2.0-edge
     releaseName: linkerd-control-plane
     namespace: linkerd
+    includeCRDs: true
     valuesFile: values.yaml
