exclude linkerd extension

--- a/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
@@ -12,7 +12,14 @@ spec:
               revision: master
               directories:
                 - path: env/cluster-addons/linkerd-stack/*
-                
+
+                - path: env/cluster-addons/linkerd-stack/linkerd-cni
+                  exclude: true
+                - path: env/cluster-addons/linkerd-stack/linkerd-jaeger
+                  exclude: true
+                - path: env/cluster-addons/linkerd-stack/linkerd-viz
+                  exclude: true
+
           - clusters: {} # all registered clusters in argocd
               # selector:
               #   matchLabels:
