--- a/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
@@ -1,43 +1,43 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: ApplicationSet
-# metadata:
-#   name: cluster-addons-linkerd-stack-appset
-#   namespace: argocd
-# spec:
-#   generators:
-#     - matrix:
-#         generators:
-#           - git:
-#               repoURL: https://github.com/logamanig/sample-argocd-apps
-#               revision: master
-#               directories:
-#                 - path: env/cluster-addons/linkerd-stack/*
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
+metadata:
+  name: cluster-addons-linkerd-stack-appset
+  namespace: argocd
+spec:
+  generators:
+    - matrix:
+        generators:
+          - git:
+              repoURL: https://github.com/logamanig/sample-argocd-apps
+              revision: master
+              directories:
+                - path: env/cluster-addons/linkerd-stack/*
 
-#                 - path: env/cluster-addons/linkerd-stack/linkerd-cni
-#                   exclude: true
-#                 - path: env/cluster-addons/linkerd-stack/linkerd-jaeger
-#                   exclude: true
-#                 - path: env/cluster-addons/linkerd-stack/linkerd-viz
-#                   exclude: true
+                - path: env/cluster-addons/linkerd-stack/linkerd-cni
+                  exclude: true
+                - path: env/cluster-addons/linkerd-stack/linkerd-jaeger
+                  exclude: true
+                - path: env/cluster-addons/linkerd-stack/linkerd-viz
+                  exclude: true
 
-#           - clusters: {} # all registered clusters in argocd
-#               # selector:
-#               #   matchLabels:
-#               #     argocd.argoproj.io/secret-type: cluster
-#   template:
-#     metadata:
-#       name: '{{path.basename}}-{{name}}'
-#       namespace: argocd
-#     spec:
-#       project: cluster-addons
-#       source:
-#         repoURL: https://github.com/logamanig/sample-argocd-apps
-#         targetRevision: master
-#         path: '{{path}}'
-#       destination:
-#         server: '{{server}}'
-#         namespace: linkerd
-#       syncPolicy:
-#         automated:
-#           prune: true
-#           selfHeal: true
+          - clusters: {} # all registered clusters in argocd
+              # selector:
+              #   matchLabels:
+              #     argocd.argoproj.io/secret-type: cluster
+  template:
+    metadata:
+      name: '{{path.basename}}-{{name}}'
+      namespace: argocd
+    spec:
+      project: cluster-addons
+      source:
+        repoURL: https://github.com/logamanig/sample-argocd-apps
+        targetRevision: master
+        path: '{{path}}'
+      destination:
+        server: '{{server}}'
+        namespace: linkerd
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
