--- a/env/cluster-addons/dedicated-ns/cert-manager/values.yaml
+++ b/env/cluster-addons/dedicated-ns/cert-manager/values.yaml
@@ -2,13 +2,13 @@
 #   repository: 
 #   pullPolicy: IfNotPresent
 
-resources:
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+# resources:
+#   requests:
+#     cpu: 100m
+#     memory: 128Mi
+#   limits:
+#     cpu: 100m
+#     memory: 128Mi
 
 securityContext:
   fsGroup: 1000
