Revert "disable linkerd control plane"
This reverts commit 2b5b76d3a08bd54cab2508cb0391a34511506111.

--- a/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
@@ -18,10 +18,10 @@ helmCharts:
   #   releaseName: linkerd-crds
   #   namespace: linkerd
 
-  # - repo: https://helm.linkerd.io/stable
-  #   name: linkerd2
-  #   version: 2.11.1
-  #   releaseName: linkerd
-  #   namespace: linkerd
-  #   includeCRDs: true
-  #   valuesFile: linkerd-values.yaml
+  - repo: https://helm.linkerd.io/stable
+    name: linkerd2
+    version: 2.11.1
+    releaseName: linkerd
+    namespace: linkerd
+    includeCRDs: true
+    valuesFile: linkerd-values.yaml
