--- a/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/kustomization.yaml
@@ -19,8 +19,8 @@ helmCharts:
     namespace: linkerd
 
   - repo: https://helm.linkerd.io/edge
-    name: linkerd2
-    version: 2.11.1
+    name: linkerd-control-plane
+    version: 1.2.0-edge
     releaseName: linkerd-control-plane
     namespace: linkerd
     includeCRDs: true
