refactor flagger appset

--- a/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
@@ -29,8 +29,10 @@ spec:
         path: '{{path}}'
       destination:
         server: '{{server}}'
-        namespace: linkerd
+        namespace: '{{path.basename}}'
       syncPolicy:
         automated:
           prune: true
           selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
