--- a/env/cluster-addons/tools/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/tools/cert-manager/kustomization.yaml
@@ -9,7 +9,7 @@ helmCharts:
     name: cert-manager
     version: 1.7.2
     includeCRDs: true
-    namespace: cert-manager
+    namespace: tools
     releaseName: cert-manager
     valuesFile: values.yaml
 
@@ -18,4 +18,4 @@ helmCharts:
     version: 0.1.1
     releaseName: cert-manager-trust
     includeCRDs: true
-    namespace: cert-manager
+    namespace: tools
