--- a/env/cluster-addons/tools/cert-manager/resources/linkerd-cert-issuer.yaml
+++ b/env/cluster-addons/tools/cert-manager/resources/linkerd-cert-issuer.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: linkerd-self-signed-issuer
-  namespace: cert-manager
+  namespace: tools
 spec:
   selfSigned: {}
 ---
@@ -10,7 +10,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: linkerd-trust-anchor
-  namespace: cert-manager
+  namespace: tools
 spec:
   isCA: true
   commonName: root.linkerd.cluster.local
@@ -27,7 +27,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: linkerd-trust-anchor
-  namespace: cert-manager
+  namespace: tools
 spec:
   ca:
     secretName: linkerd-identity-trust-roots
