--- a/env/cluster-addons/tools/dapr/values.yaml
+++ b/env/cluster-addons/tools/dapr/values.yaml
@@ -1,6 +1,6 @@
 global:
   registry: docker.io/daprio
-  tag: 'edge'
+  tag: 1.7.0
   dnsSuffix: ".cluster.local"
   logAsJson: false
   imagePullPolicy: IfNotPresent
