--- a/env/test/jaeger-create-span-app/auto-instrumentation.yaml
+++ b/env/test/jaeger-create-span-app/auto-instrumentation.yaml
@@ -14,7 +14,7 @@ spec:
     type: parentbased_traceidratio
     argument: "1"
     java:
-    image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-java:latest
+    image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-java:1.10.1
   nodejs:
     image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-nodejs:latest
   python:
