--- a/env/cluster-addons/monitoring/jaeger/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger/values.yaml
@@ -1,11 +1,11 @@
-# image:
-#   tag: 1.32.0
+image:
+  tag: 1.33.0
 
 jaeger:
   create: true
   spec:
     allInOne:
-      image: jaegertracing/all-in-one:1.32.0
+      image: jaegertracing/all-in-one:1.33.0
     # strategy: production
     ingress:
       enabled: true
