--- a/env/test/jaeger-create-span-app/auto-instrumentation.yaml
+++ b/env/test/jaeger-create-span-app/auto-instrumentation.yaml
@@ -13,6 +13,17 @@ spec:
   sampler:
     type: parentbased_traceidratio
     argument: "1"
+  env:
+    - name: OTEL_APP_NAME
+      valueFrom:
+        fieldRef:
+          fieldPath: metadata.labels['app']
+    - name: OTEL_APP_NAMESPACE
+      valueFrom:
+        fieldRef:
+          fieldPath: metadata.namespace
+    - name: OTEL_SERVICE_NAME
+      value: $(OTEL_APP_NAMESPACE)-$(OTEL_APP_NAME)
   java:
     image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-java:1.10.1
   nodejs:
