--- a/env/test/jaeger-create-span-app/service.yaml
+++ b/env/test/jaeger-create-span-app/service.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app
-  namespace: test
+  name: jaeger-test
 spec:
   selector:
-    app: my-app
+    app: jaeger-test
   ports:
   - name: http
     port: 8080
