--- a/env/test/jaeger-create-span-app/service.yaml
+++ b/env/test/jaeger-create-span-app/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger-test
+  name: my-app
 spec:
   selector:
-    app: jaeger-test
+    app: my-app
   ports:
   - name: http
     port: 8080
