fix jaeger deploy

--- a/env/test/jaeger-create-span-app/deployment.yaml
+++ b/env/test/jaeger-create-span-app/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: myapp
-          - image: jaegertracing/vertx-create-span:operator-e2e-tests
+          image: jaegertracing/vertx-create-span:operator-e2e-tests
           env:
             - name: JAEGER_AGENT_HOST
               value: otel-collector-daemonset-collector.monitoring
